# awesome-qldpc

./: .gitignore  Gemfile  LICENSE  Makefile  README.md  _config.yml  about.html  about.md  codes.html  codes.md  feed.xml  index.html  index.md  visualizations.md
.bundle/: config
.github/workflows/: jekyll.yml
.sass-cache/0b38e50d439be318a6b74920b60dfc3a16e460e7/: _buttons.scssc  _layout.scssc  _typography.scssc  mixins.scssc
.sass-cache/2043015e26a30c8e597e49d7628eaaa84149d6f1/: syntax.scssc
.sass-cache/39b43cd6e2eb6f28e69d5887afbe2c386f9f204e/: _colors.scssc  _layout.scssc  _lists.scssc  _spacing.scssc  _typography.scssc  utilities.scssc
.sass-cache/8edacee06cf3a7979c46836596a3a274dff8a2ca/: setup.scssc
.sass-cache/a532e2859996163595e4bea7f41f2421aac47de2/: normalize.scssc
.sass-cache/bf8cc45564408ae8a7443ce1c656539177fd45a1/: base.scssc  buttons.scssc  code.scssc  content.scssc  labels.scssc  layout.scssc  modules.scssc  navigation.scssc  print.scssc  search.scssc  skiptomain.scssc  tables.scssc  typography.scssc
.sass-cache/c0d361420210b02f038b10b0f7cb54e4afd4e480/: syntax.scssc
.sass-cache/e1ee59ffdc253bda84cbdc425aaa6a4e6052d56e/: custom.scssc
.sass-cache/ebba2215bc12edcec515b9d83e4acee3c8b1c45a/: custom.scssc
.sass-cache/f062cfc32d5b47915b8e8c8b57a042783e40b3a3/: dark.scssc  light.scssc
_includes/: head_custom.html
_layouts/: default.html
_site/: feed.xml  pyproject.toml  visualizations.html
_site/assets/js/: just-the-docs.js  search-data.json
awesome_qldpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: qldpc_codes.csv
(+5 files in other folders)
