[project]
name = "awesome-qldpc"
version = "0.1.0"
description = "A repository for gathering awesome qLDPC codes."
authors = [
    {name = "François-Marie Le Régent", email = "fm.le.regent@gmail.com"},
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]